--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@tailwindcss/postcss": "^4.0.13",
     "@tailwindcss/vite": "^4.0.13",
     "astro": "^5.6.0",
-    "postcss": "^8.5.3",
     "slugify": "^1.6.6",
     "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
     "@types/postcss-js": "^4.0.4",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
     "postcss-js": "^4.0.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
